Fixed wrapping of text in shop and moved game start function to the bottom

--- a/style/main-page.css
+++ b/style/main-page.css
@@ -152,7 +152,6 @@
     text-decoration: none;
     font-size: 25px;
     transition: 0.3s;
-    white-space: nowrap;
 }
 
 #mySideNav p{
@@ -162,7 +161,6 @@
     text-decoration: none;
     font-size: 15px;
     transition: 0.3s;
-    white-space: nowrap;
 }
 
 #mySideNav .closeButton{
